//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/any.proto";

import "dxos/halo/credentials.proto";
import "dxos/echo/snapshot.proto";
import "dxos/echo/timeframe.proto";
import "dxos/echo/object.proto";

// TODO(burdon): Standardize position of "package" (i.e., before/after imports).
// TODO(burdon): Move Item specific to echo.item?
package dxos.echo.feed;

/**
 * Outer message type decoded by Codec.
 * This is what is written to the feeds.
 */
message FeedMessage {
  dxos.echo.timeframe.TimeframeVector timeframe = 1;
  
  message Payload{
    oneof payload {
      CredentialsMessage credential = 10;
      DataMessage data = 11;
    }
  }
  Payload payload = 2;
}

/**
 * A container for dxos.credentials.Message
 */
message CredentialsMessage {
  dxos.halo.credentials.Credential credential = 1;
}

/**
 * A container ECHO database messages in data feeds.
 */
message DataMessage {
  dxos.echo.object.EchoObject object = 1;
}