//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.echo.testing;

import "google/protobuf/any.proto";

// Augmented data from feeds.
message FeedMessage {
  bytes feedKey = 1;
  Envelope data = 2;
}

// Root message type.
message Envelope {
  google.protobuf.Any message = 1;
}

// Test HALO message.
message Admit {
  bytes feedKey = 1;
}

// TODO(burdon): Supported?
message Remove {
  bytes feedKey = 1;
}

// Vector timestamp used to order messages.
message VectorTimestamp {
  message Feed {
    bytes feedKey = 1; // TODO(burdon): Remove?
    int32 feedIndex = 2;
    int32 seq = 3;
  }

  repeated Feed timestamp = 1;
}

// Wrapper for all ECHO messages.
message ItemEnvelope {
  string itemId = 1;
  VectorTimestamp timestamp = 2;
  google.protobuf.Any payload = 3;
}

// Item creation.
message ItemGenesis {
  string type = 1;
  string model = 2;
  string modelVersion = 3;
}

// Item mutation.
message ItemMutation {
  string key = 1;
  string value = 2;
}

// Testing.
message TestData {
  int32 data = 1;
}
